--- a/jenkinscompose/docker-compose.yml
+++ b/jenkinscompose/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   jenkins:
     container_name: jenkins
-    image: jenkins-ansible
+    image: jenkins/jenkins
     build:
       context: jenkins-ansible     
     ports:
